--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-03 00:23:13
+lastsearch = 2024-08-03 01:55:27
 
 [chieutruc.info]
 match = -60.0%%
@@ -13,8 +13,8 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
 match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [shopee.vn]
 match = -64.0%%
@@ -27,9 +27,9 @@ title = Chiếu Tre Cao Bằng - Đà Nẵng
 url = https://suongtuyet.com/chieu-truc-cao-bang
 
 [www.youtube.com]
-match = -32.0%%
-title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
-url = https://www.youtube.com/watch?v=sGb4V5EQcww
+match = -68.0%%
+title = Showmatch Siêu Thú Đại Chiến cùng Biệt Đội Thỏ và Sói ...
+url = https://www.youtube.com/watch?v=Y24GUZO8_J0
 
 [chieutrucsaigon.com]
 match = -4.0%%
@@ -215,4 +215,9 @@ url = https://baochinhphu.vn/ra-mat-phan-mem-phat-hien-dau-hieu-lua-dao-qua-dien
 match = -52.0%%
 title = Cao Bằng: Giao thông ngưng trệ do sạt lở Quốc lộ 3
 url = https://vtv.vn/xa-hoi/cao-bang-giao-thong-ngung-tre-do-sat-lo-quoc-lo-3-20240730122707145.htm
+
+[www.vaticannews.va]
+match = -28.0%%
+title = Tin Mừng và Lời Chúa ngày 18 tháng chín 2024
+url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/09/18.html
 
