--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-02 18:12:57
+lastsearch = 2024-08-03 01:45:32
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -200.0%%
-title = Anh Em United - Để mà hỏi Chido Obi Martin đá như nào ...
-url = https://m.facebook.com/story.php/?story_fbid=461723650074946&id=100087119453381
+match = -187.5%%
+title = Cách mà Anh ta khai trương Nơi lạnh giá nhất chương trình
+url = https://m.facebook.com/groups/342480505364739/posts/460587506887371/
 
 [www.sjcallahabad.org]
 match = -212.5%%
