--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-02 22:57:59
+lastsearch = 2024-08-03 01:52:43
 
 [scholar.google.com]
 match = -43.8%%
@@ -197,9 +197,9 @@ title = Lễ tốt nghiệp đặc biệt của những học sinh TH School ...
 url = https://vov1.vov.gov.vn/thoi-su-21h30/le-tot-nghiep-dac-biet-cua-nhung-hoc-sinh-th-school-nam-hoc-2024-08062024-c29-116987.aspx
 
 [hanoimoi.vn]
-match = -181.2%%
-title = Dược phẩm Lĩnh Nam - tiên phong khoa học, đồng hành ...
-url = https://hanoimoi.vn/duoc-pham-linh-nam-tien-phong-khoa-hoc-dong-hanh-cham-soc-suc-khoe-nguoi-viet-668755.html
+match = -200.0%%
+title = Việt Nam - Hàn Quốc kết nối giao thương về công nghệ ...
+url = https://hanoimoi.vn/viet-nam-han-quoc-ket-noi-giao-thuong-ve-cong-nghe-thong-tin-673757.html
 
 [suckhoedoisong.vn]
 match = -131.2%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -150.0%%
-title = HR - TUYỂN DỤNG | NHÀ HÀNG - SHOWROOM BEER & ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8391989424158364/
+match = -156.2%%
+title = HR - TUYỂN DỤNG | [HCM - THỦ ĐỨC] 𝐿𝑖̃𝑛ℎ 𝑣𝑢̛̣𝑐 𝐸- ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8404353556255284/
 
 [shopee.vn]
 match = -75.0%%
@@ -693,8 +693,8 @@ url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-tan-phu-21
 
 [baotintuc.vn]
 match = -200.0%%
-title = Ông Lý Rotha được bầu giữ chức Phó Chủ tịch HĐND tỉnh ...
-url = https://baotintuc.vn/thoi-su/ong-ly-rotha-duoc-bau-giu-chuc-pho-chu-tich-hdnd-tinh-soc-trang-20240731175848566.htm
+title = Nâng cao hiệu quả hoạt động vận động, tập hợp cựu chiến ...
+url = https://baotintuc.vn/thoi-su/nang-cao-hieu-qua-hoat-dong-van-dong-tap-hop-cuu-chien-binh-o-co-so-20240802170325509.htm
 
 [www.bigc.vn]
 match = -143.8%%
@@ -702,9 +702,9 @@ title = BIG C VIETNAM Đại siêu thị: GIÁ LUÔN LUÔN RẺ HƠN
 url = https://www.bigc.vn/
 
 [vneconomy.vn]
-match = -237.5%%
-title = Tháng 7: Lực bán của khối ngoại đã suy yếu, giá trị bán ròng ...
-url = https://vneconomy.vn/thang-7-luc-ban-cua-khoi-ngoai-da-suy-yeu-gia-tri-ban-rong-giam-con-mot-nua.htm
+match = -212.5%%
+title = Khối ngoại bắt đáy, gom nhiều VNM và MSN, nhà đầu tư cá ...
+url = https://vneconomy.vn/khoi-ngoai-bat-day-gom-nhieu-vnm-va-msn-nha-dau-tu-ca-nhan-van-ban-rong.htm
 
 [www.aia.com.vn]
 match = -187.5%%
@@ -720,4 +720,9 @@ url = https://www.msdmanuals.com/vi/professional/khoa-nhi/bất-thường-về-n
 match = -87.5%%
 title = SNTM Chúa nhật tuần 18 thường niên -B
 url = https://gpbanmethuot.vn/song-dao/sntm-chua-nhat-tuan-18-thuong-nien-b-16576.html
+
+[www.binhduong.gov.vn]
+match = -187.5%%
+title = Tin tức sự kiện - Giao ban báo chí 6 tháng đầu năm 2024
+url = https://www.binhduong.gov.vn/tin-tuc/2024/08/908-giao-ban-bao-chi-6-thang-dau-nam-2024-giai-dap-nhieu-van-de-bao-chi-quan-ta
 
