--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-03 01:25:07
+lastsearch = 2024-08-03 01:54:03
 
 [www.tiktok.com]
 match = -170.6%%
@@ -137,9 +137,9 @@ title = Cách chỉnh màn hình máy tính chuẩn trên ...
 url = https://www.thegioididong.com/hoi-dap/cach-chinh-man-hinh-may-tinh-chuan-tren-may-tinh-windows-1314884
 
 [www.elleman.vn]
-match = -11.8%%
-title = buc anh dep - elle man - 16
-url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-43-13-pm-2/
+match = -58.8%%
+title = hình ảnh đẹp - ELLE MAN việt nam (16)
+url = https://www.elleman.vn/van-hoa-giai-tri/hinh-anh-dep-lan-toa-nhat-2018/attachment/hinh-anh-dep-elle-man-viet-nam-16/
 
 [vnmedia.vn]
 match = -164.7%%
