--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-02 21:11:52
+lastsearch = 2024-08-03 01:58:13
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = -111.1%%
+title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
+url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034
 
 [www.lazada.vn]
 match = -161.1%%
@@ -32,14 +32,14 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+match = 5.6%%
+title = Vỏ gối kê xoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPC21054 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epc21054-45x65.html
+match = -100.0%%
+title = Vỏ gối EPCWAVE 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epcwave-45x65.html
 
 [shopee.vn]
 match = -127.8%%
