--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-03 00:47:50
+lastsearch = 2024-08-03 03:30:28
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html?srsltid=AfmBOooegDCYbnerMhEUN4_c2Kzwe49RosVb9hSFUkDm2dRiHe6JYy5B
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
 
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOoq7SwVykNG1_sc0lp3ORagXoetOdyjMT5r2bONh2om2OgH5Mnyb
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
