--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-03 02:59:39
+lastsearch = 2024-08-03 03:44:46
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Chiều nay em đi câu cá, con cua, nhạc thiếu nhi vui nhộn, quả ...
-url = https://www.youtube.com/watch?v=6ZKWF1hxUeE
+match = -121.1%%
+title = Cháu Vẽ Ông Mặt Trời ♪ Bé MAI VY Thần Đông Âm Nhạc ...
+url = https://www.youtube.com/watch?v=Rj_PwYmo8lg
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -107,8 +107,8 @@ title = Chiếu Hương Trúc | Lang Son
 url = https://www.facebook.com/chieuhuongtrucls/?locale=vi_VN
 
 [huongtruc.com]
-match = 38.9%%
-title = Chiếu Trúc Tăm H&T
+match = -136.8%%
+title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương mại ...
 url = https://huongtruc.com/chi-tiet/chieu-ht
 
 [chieutruc.info]
