--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-03 03:00:21
+lastsearch = 2024-08-03 03:46:08
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -650,4 +650,9 @@ url = https://2009-2017.state.gov/documents/organization/132080.pdf
 match = -43.5%%
 title = CNN: Breaking News, Latest News and Videos
 url = https://www.cnn.com/
+
+[books.google.com]
+match = -82.6%%
+title = Japan Weekly Mail - Page 194 - Google Books Result
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+15+19&source=bl&ots=_sobLNJ8lx&sig=ACfU3U3QkbGBIHV6dfxQRS-GUQyKilIZug&hl=en&sa=X&ved=2ahUKEwiMlfHVlteHAxXEv4kEHZnYE9kQ6AF6BAgrEAM
 
