--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-02 22:21:40
+lastsearch = 2024-08-03 04:32:04
 
 [shopee.vn]
-match = 2.9%%
-title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
+match = -2.9%%
+title = Chiếu điều hòa cao su non Latex Thái Lan vải lụa Tencel ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-Latex-Thái-Lan-vải-lụa-Tencel-mịn-mát-hàng-loại-1-êm-ái-thoáng-mát-giải-nhiệt-mùa-hè-i.240825360.8533242025
 
 [olbedding.com]
 match = 11.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [giadunganhvan.vn]
 match = 48.0%%
