--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-08-02 15:32:32
+lastsearch = 2024-08-03 04:34:26
 
 [tiki.vn]
 match = -47.6%%
@@ -12,14 +12,14 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -9.5%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -77,9 +77,9 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [vn.taiwantoday.tw]
-match = -533.3%%
-title = Ảnh
-url = https://vn.taiwantoday.tw/list_photo.php?&iden=44211
+match = -85.7%%
+title = 6 bộ phim Đài Loan được trình chiếu tại Liên hoan ...
+url = https://vn.taiwantoday.tw/news.php?unit=461&post=222153
 
 [nhandan.vn]
 match = -142.9%%
