--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-03 01:48:13
+lastsearch = 2024-08-03 04:31:24
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -200.0%%
-title = [CHÍNH HÃNG] LineaBon – Vitamin tăng chiều cao D2 K3 ...
-url = https://shopee.vn/-CHÍNH-HÃNG-LineaBon-–-Vitamin-tăng-chiều-cao-D2-K3-đầu-tiên-từ-Châu-Âu-i.365676746.2966330385
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
@@ -77,9 +77,9 @@ title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
 url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
-match = -240.0%%
-title = D2 Cột Bóng rổ, Hầm chui, Vận động-Thể chất - Đồ chơi Bắc Hà
-url = https://dochoimamnon123.com/d2-cot-bong-ro-ham-chui-van-dong-the-chat
+match = -113.3%%
+title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
 match = -113.3%%
@@ -304,7 +304,7 @@ url = https://thepxuanlien.com/san-pham/luoi-thep-han
 [www.booking.com]
 match = -146.7%%
 title = CHILLIapartamenty - Polanki Aqua D212 - BAŁTYCKI
-url = https://www.booking.com/hotel/pl/chilliapartamenty-polanki-aqua-d212-baltycki.vi.html
+url = https://www.booking.com/hotel/pl/chilliapartamenty-polanki-aqua-d212-baltycki.vi.html&
 
 [hcmyu.hpu2.edu.vn]
 match = -253.3%%
