--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-03 01:50:04
+lastsearch = 2024-08-03 04:36:11
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -100.0%%
 title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr?srsltid=AfmBOoqD8I7SlvsvtPFm-OnGpQOERU48ME2vx_bMaFX82MvJQ83X4Osx
+url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
 match = -142.1%%
