--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -36.8%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOop8K8b19awjDwbxVeEMZdJXvrTlc-h96iDQlcCIkHQ0WuId0A7z
 
 [falcon.com.vn]
 match = -105.3%%
