--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-03 00:37:05
+lastsearch = 2024-08-03 04:38:18
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.0%%
-title = Steve Braunstein, MD, PhD
-url = https://profiles.ucsf.edu/steve.braunstein
+match = 0.0%%
+title = Jennifer Puck, MD
+url = https://profiles.ucsf.edu/jennifer.puck
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -85.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -165.0%%
+title = Kristine Erlandson, MD Professor, Medicine-Infectious Disease
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/6113
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -152,9 +152,9 @@ title = Theories of the Policy Process
 url = http://ruby.fgcu.edu/courses/twimberley/EVR2861/theorypolprocess.pdf
 
 [www.dhcs.ca.gov]
-match = -30.0%%
-title = CPE-Pending-QP-list-6-17-2024
-url = https://www.dhcs.ca.gov/services/medi-cal/eligibility/Documents/CPE-Pending-QP-list-6-17-2024.xlsx
+match = -155.0%%
+title = List-of-Successfully-Registered-Entities-and-Physicians
+url = https://www.dhcs.ca.gov/Documents/List-of-Successfully-Registered-Entities-and-Physicians.xlsx
 
 [www.cigna.com]
 match = -50.0%%
